<resources>
    <string name="app_name">OFF Home</string>
    <string name="title_activities">Activities</string>
    <string name="title_explore">Explore</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_info">Map</string>
    <string name="join">JOIN</string>
    <string name="submit">SUBMIT</string>
    <string name="participants">Participants:</string>
    <string name="about_the_activity">About the activity:</string>
    <string name="created_by">Created by </string>
    <string name="category_name" translatable="false">EXTRA_CATEGORY_NAME</string>
    <string name="title_of_the_activity">Title of the activity</string>
    <string name="create">CREATE</string>
    <string name="insert_title">Insert title</string>
    <string name="insert_text">Insert text</string>
    <string name="date">Date</string>
    <string name="choose_location">Choose location</string>
    <string name="set_address1">Insert street name</string>
    <string name="set_address2">Num</string>
    <string name="choose_date">Start time</string>
    <string name="choose_dateFi">Finish time</string>
    <string name="invite_friends">Invite friends</string>
    <string-array name="select_category">
        <item>Select a category</item>
        <item>Running</item>
        <item>Walking</item>
        <item>Skating</item>
        <item>Cycling</item>
        <item>Meditation</item>
        <item>Cultural</item>
        <item>Volunteering</item>
        <item>Gastronomic</item>
        <item>WaterSports</item>
    </string-array>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="my_activities">My activities</string>
    <string name="about_me">About me</string>
    <string name="settings">Settings</string>
    <string name="older_activities">Older activities</string>
    <string name="liked_activities">Liked activities</string>
    <string name="description">Description</string>
    <string name="birth_date">Birth date</string>
    <string name="tags">Tags</string>
    <string name="tag">Tag</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="title_activity_profile">Profile</string>
    <string name="tab_text_1">Activities</string>
    <string name="tab_text_2">About Me</string>
    <string name="tab_text_3">Settings</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_username">Username</string>
    <string name="button_sign_up">Sign up</string>
    <string name="have_an_account_already">"Have an account already? Log in "</string>
    <string name="button_here"><u>here</u></string>
    <string name="text_view_or">or</string>
    <string name="continue_google">Continue with Google</string>
    <string name="emailConfirmationMessage">Success! A confirmation link will be sent to your e-mail address</string>
    <string name="username_taken"> Sign up error: username is taken </string>
    <string name="email_taken"> Sign up error: this e-mail is already registered </string>
    <string name="google_sign_up_error"> Sign up error: there was an error signing up with Google </string>
    <string name="unknown_sign_up_error"> Sign up error: there was an unknown error </string>
    <string name="invalid_birth_date"> Not a valid birth date </string>
    <string name="sign_up_connection_error"> Sign up error: connection error. Could not reach the server </string>
    <string name="sign_up_server_error"> Sign up error: Error in the server. Could mean that username is taken </string>
    <string name="sign_up_bad_email_format"> Sign up error: The e-mail address is badly formatted </string>
    <string name="sign_up_fb_connection_error">Sign up error: Could not reach Firebase </string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="button_login">Log in</string>
    <string name="text_view_have_not_account">Don \'t have an account yet? Sign up </string>
    <string name="login_failed_email">Email not verified</string>
    <string name="login_failed_login">Wrong email or password</string>
    <string name="off_home_logo">OFF Home logo</string>
    <string name="show_password_description">Show Password</string>
    <string name="max_participants">Max participants</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="go_chat">Go chat!</string>
    <string name="view_my_public_profile">View my public profile</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_following">Following</string>
    <string name="error_follow">Error! Please try it again later</string>
    <string name="toast_start_following">"You started following "</string>
    <string name="username_updated_toast">Username updated.</string>
    <string name="username_update_error_toast">Couldn\'t update username. Please try again later.</string>
    <string name="description_updated_toast">Description updated.</string>
    <string name="description_update_error_toast">Couldn\'t update description. Please try again later.</string>
    <string name="tags_cant_be_empty_toast">tags can\'t be empty</string>
    <string name="recover_password_text">Type your email to send a mail to reset your password.</string>
    <string name="btn_recover_password">Recover password</string>
    <string name="share_activity_title">Share this activity (invite a friend)</string>
    <string name="share_in_app_title">Invite via DM</string>
    <string name="share_outside_app_title">Invite through external app</string>
</resources>