<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_activities">

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.offhome.app.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.offhome.app.ui.activities.ActivitiesFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_activities" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.offhome.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.offhome.app.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_placeholder_fragment" />
</navigation>