<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText">
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share_btn"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share_activity_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/share_in_app_btn"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/share_in_app_title"
                app:showAsAction="never" />
            <item
                android:id="@+id/share_outside_app_btn"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share_outside_app_title"
                />
        </menu>
    </item>
</menu>